Fix header logo alignment

--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -1,5 +1,8 @@
 //==========  Header ==========//
 .header {
+  &-link {
+    max-width: 134px;
+  }
   &-logo {
     max-height: 32px;
     margin-left: -22px;
